RESOLVED FIXED141765
[Win] CFData leak in CDMSessionAVFoundationCF
https://bugs.webkit.org/show_bug.cgi?id=141765
Summary [Win] CFData leak in CDMSessionAVFoundationCF
Joseph Pecoraro
Reported 2015-02-18 12:44:33 PST
* SUMMARY Possible CFData leak in CDMSessionAVFoundationCF. This looks like a leak to me: RetainPtr<CFDataRef> keyRequest = AVCFAssetResourceLoadingRequestCreateStreamingContentKeyRequestDataForApp(...); The naming of the method implies "Create" so I would expect an adoptCF() into the RetainPtr.
Attachments
Patch (1.75 KB, patch)
2015-02-18 14:36 PST, Brent Fulgham
joepeck: review+
Brent Fulgham
Comment 1 2015-02-18 14:10:39 PST
(In reply to comment #0) > * SUMMARY > Possible CFData leak in CDMSessionAVFoundationCF. > > This looks like a leak to me: > > RetainPtr<CFDataRef> keyRequest = > AVCFAssetResourceLoadingRequestCreateStreamingContentKeyRequestDataForApp(... > ); > > The naming of the method implies "Create" so I would expect an adoptCF() > into the RetainPtr. I agree!
Radar WebKit Bug Importer
Comment 2 2015-02-18 14:11:30 PST
Brent Fulgham
Comment 3 2015-02-18 14:36:37 PST
Joseph Pecoraro
Comment 4 2015-02-18 15:20:46 PST
Comment on attachment 246849 [details] Patch r=me! Thanks.
Brent Fulgham
Comment 5 2015-02-18 16:20:23 PST
Note You need to log in before you can comment on or make changes to this bug.