[Win] CFData leak in CDMSessionAVFoundationCF https://bugs.webkit.org/show_bug.cgi?id=141765 <rdar://problem/141765>

Reviewed by Joseph Pecoraro.

* platform/graphics/avfoundation/cf/CDMSessionAVFoundationCF.cpp:
(WebCore::CDMSessionAVFoundationCF::generateKeyRequest): use 'adoptCF'
so we don't double-increment the retain count.


Canonical link: https://commits.webkit.org/159801@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@180324 268f45cc-cd09-0410-ab3c-d52691b4dbfc